--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
-#coding:utf-8
-
-import cgi
-
-print("Content-type:text/html;charset=utf-8")
-
-html="""<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--javascript libraries--> 
+    <script src="javascript/leaflet/leaflet.js"> // insertion bibliothèque Leaflet : http://leafletjs.com/ </script>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/leaflet.css" /> 
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <!-- Load icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>ProjetE: Temperatures France</title>
 </head>
 <body>
-    
-    <p>voici une page</p>
-
+    <div class="row">
+        <nav class="col-4">
+            <div class="container">
+                <h1 class="heading">Recherche de stations...</h1>
+                <div class="searchInputWrapper">
+                <input class="searchInput" type="text" placeholder='Recherche de stations...'>
+                <i class="searchInputIcon fa fa-search"></i>
+                </input>
+                </div>
+            </div>
+        </nav>
+        <main class="col-8">
+            <p>this is the main box</p>
+        </main>
+    </div>
 </body>
 </html>
-"""
-
-print(html)
