--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <div class="row">
         <nav class="col-4">
+            <!--search bar-->
             <div class="container">
                 <h1 class="heading">Recherche de stations...</h1>
                 <div class="searchInputWrapper">
@@ -25,10 +26,22 @@
                 </input>
                 </div>
             </div>
+            <!--end of search bar-->
         </nav>
         <main class="col-8">
-            <p>this is the main box</p>
+            <div id="map"></div> 
         </main>
     </div>
+
+    <script>
+        // Creation d'une carte dans la balise div "map", et positionne la vue sur un point donné et un niveau de zoom
+        var map = L.map('map').setView([46.5,2.5], 5);
+        // Ajout d'une couche de dalles OpenStreetMap
+        L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+        }).addTo(map);
+    </script>
+
+
 </body>
 </html>
