--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--javascript libraries--> 
     <script src="javascript/leaflet/leaflet.js"> // insertion bibliothèque Leaflet : http://leafletjs.com/ </script>
+    <script src="javascript/index.js"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/leaflet.css" /> 
@@ -27,6 +28,11 @@
                 </div>
             </div>
             <!--end of search bar-->
+            <div>
+                <h1 id="welcome">Bienvenue,</h1>
+                <p id="citations">“Limaçon aventureux, le temps sera pluvieux.”</p>
+            </div>
+            
         </nav>
         <main class="col-8">
             <div id="map"></div> 
